=== DRomics : Dose response for omics ===

Version 2.1-0 
=============
NEW FEATURES
- Add of the function bmdplotwithgradient()
- Add of the function ecdfquantileplot()
- Add of an argument named information.criterion in drcfit() to choose 
the use of AIC or BIC for the best fit model selection process.


Version 2.0-1 
=============
NEW FEATURES
- Add of a filter in itemselect(), to exclude from the selection items
with a too high proportion of non detected values (assuming they were
imputed to a common minimum value).
- Add of an argument point.type that enables the change of point type
in, ecdfplotwithCI or its coding by a given factor.
- Add of an argument plot.type in function plot.drcfit() to enable
residual plots.

Version 2.0-0 
=============
NEW FEATURES
- Replacement of the function omicdata() by the function 
microarraydata() and add of two new data importation functions,
RNAseqdata() and metabolomicdata().

Version 1.1-3 
=============
NEW FEATURES
- Replacement of the argument named bytypology of plot.bmdcalc
by an argument named by which can taka three values,
"none", "trend", "model" or "typology".
- Add of a function to plot fitted curves (new function curvesplot()).

Version 1.1-2 
=============
NEW FEATURES
- Add of a function to plot the distribution of a variable as an ecdf plot, with confidence 
intervals on this variable (new function ecdfplotwithCI)

Version 1.1-1 
=============
NEW FEATURES
- Add of bootstrap computation of confidence intervals on benchmark doses (new function bmdboot)
- Add of a function to plot the distribution of a variable as an ecdf plot, with confidence 
intervals on this variable (new function ecdfplotwithCI)


Version 1.0-1
=============
NEW FEATURES
- Add of column yextrem in the results of drcfit (y value at the extremum for biphasic curves)

Version 1.0-0
=============

- Initial release.