@@ -7,9 +7,10 @@
 \description{
 RNAseq data in raw counts are imported from a .txt file 
 (internally imported using the function \code{\link{read.table}}), 
-checked (see the description 
+checked or from a R object of class \code{data.frame} 
+(see the description 
 of argument \code{file} for the required format
-of data) or from a R object of class \code{data.frame}, 
+of data), 
 normalized with respect to library size and tranformed in 
 a log2 scale using
 variance stabilizing transformation or regularized logarithm.
@@ -24,11 +25,19 @@ RNAseqdata(file, check = TRUE, transfo.method = c("rlog", "vst"))
 
 \arguments{
 \item{file}{The name of the .txt file (e.g. \code{"mydata.txt"})
-containing one row per item, with the first column corresponding to the identifier of each item, and the other columns giving the responses
+containing one row per item, with the first column corresponding to the identifier of each item, 
+and the other columns giving the responses
 of the item for each replicate at each dose or concentration. 
-In the first line, after a name for the identifiers column, we must have the tested
-doses or concentrations in a numeric format for the corresponding replicate (for example, if there are triplicates for each treatment, the first line could be "item", 0, 0, 0, 0.1, 0.1, 0.1, etc. Alternatively an R object of class \code{data.frame} can be directly given for this argument, corresponding to the output
-of \code{read.table(file, header = FALSE)} on a file described as above.}
+In the first line, after a name for the identifier column, we must have the tested
+doses or concentrations in a numeric format for the corresponding replicate 
+(for example, if there are triplicates for each treatment, 
+the first line could be "item", 0, 0, 0, 0.1, 0.1, 0.1, etc.). 
+This file is imported within the function using the function
+\code{\link{read.table}} with its default field separator (sep argument).
+Alternatively an R object of class \code{data.frame} can be directly given in input, 
+corresponding to the output
+of \code{read.table(file, header = FALSE)} on a file described as above. The two
+alternatives are illustrated below in examples.}
 
 \item{check}{If TRUE the format of the input file is checked.}
 
@@ -43,10 +52,7 @@ using the
 }
 
 \details{
-This function imports the data from a .txt file, using the function
-\code{\link{read.table}} with its default field separator (sep argument),
-then checks the format of 
-data (see the description 
+This function imports the data, checks their format (see the description 
 of argument \code{file} for the required format
 of data) and gives in the \code{print} information
 that should help the user to check that the coding of data is correct : the tested doses (or concentrations) 
